--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,7 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.3.0",
+    "fs": "^0.0.1-security",
+    "pg": "^8.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
