--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^11.3.0",
     "fs": "^0.0.1-security",
