--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,12 +15,14 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^11.3.0",
     "fs": "^0.0.1-security",
     "pg": "^8.12.0",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
