--- a/react-app/package.json
+++ b/react-app/package.json
@@ -30,6 +30,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/node": "^22.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
